--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=realestate
 
 # application.properties file
 server.port=3000
-spring.datasource.url=jdbc:mysql://mysql:3306/realestate
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
